--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ pathos = "^0.2.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^21.8b0"
+pylint = "^2.10.2"
+wrapt = "^1.12.1"
+Sphinx = "^4.1.2"
+sphinx-rtd-theme = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
