--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.7.1,<3.11"
 asyncio = "^3.4.3"
 nest-asyncio = "^1.5.1"
 pathos = "^0.2.8"
+safety = "^1.10.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -17,6 +18,8 @@ pylint = "^2.10.2"
 wrapt = "^1.12.1"
 Sphinx = "^4.1.2"
 sphinx-rtd-theme = "^0.5.2"
+mypy = "^0.910"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
