--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,7 @@ safety = "^1.10.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[virtualenvs]
+create = true
+in-project = true
