--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ tox = "^3.24.3"
 toml = "^0.10.2"
 coveralls = "^3.2.0"
 sphinx-autoapi = "^1.8.4"
+pre-commit = "^2.15.0"
 
 [tool.black]
 line-length = 132
