--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload coverage data to coveralls.io
         run: poetry run coveralls --service=github
         env:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_FLAG_NAME: ${{ runner.os }}-python${{ matrix.python }}
           COVERALLS_PARALLEL: true
   coveralls:
@@ -50,5 +50,5 @@ jobs:
       run: |
          pip3 install --upgrade coveralls
          coveralls --service=github --finish
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
