--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "parallely"
-version = "0.1.0"
-description = "The simplest way to utilize multiple threads, processes, and asynchronous in Python"
+version = "0.2.0"
+description = "The simplest way to utilize multiple threads, processes, and async functions in Python"
 authors = ["Mikkel Vilstrup <mikkel@vilstrup.dk>"]
 readme = "README.md"
 license = "Apache-2.0"
@@ -63,9 +63,7 @@ profile = "black"
 line_length = 132
 skip_glob = [ "docs", "notes" ]
 
-[virtualenvs]
-create = true
-in-project = true
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
