--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -26,8 +26,10 @@ importlib-metadata==4.8.1; python_version < "3.8" and python_version >= "3.6" an
 isort==5.9.3; python_full_version >= "3.6.1" and python_version < "4.0"
 jinja2==3.0.1; python_version >= "3.6"
 lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
+m2r2==0.3.1
 markupsafe==2.0.1; python_version >= "3.6"
 mccabe==0.6.1; python_version >= "3.6" and python_version < "4.0"
+mistune==0.8.4
 more-itertools==8.9.0; python_version >= "3.5"
 multiprocess==0.70.12.2
 mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.5"
