--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ coveralls = "^3.2.0"
 sphinx-autoapi = "^1.8.4"
 pre-commit = "^2.15.0"
 m2r2 = "^0.3.1"
+jupyter = "^1.0.0"
+ipykernel = "^6.4.1"
 
 [tool.black]
 line-length = 132
